<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/match_history_date_lbl" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/match_history_opponent_lbl" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:textStyle="bold"
                android:text="@string/match_history_result_lbl" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/header_divider"/>

</LinearLayout>