<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/new_match_cont"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <FrameLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp">

                <AutoCompleteTextView
                    android:id="@+id/new_match_opponent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:completionThreshold="1"
                    android:hint="@string/new_match_opponent_lbl" />

                <ImageButton
                    android:id="@+id/new_match_clear_opponent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clear"
                    android:background="?android:selectableItemBackground"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="right" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:textAppearance="?android:textAppearanceLarge"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/new_match_your_wins_lbl" />

                    <Spinner
                        android:id="@+id/new_match_wins"
                        android:layout_width="wrap_content"
                        android:minWidth="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:textAppearance="?android:textAppearanceLarge"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/new_match_your_losses_lbl" />

                    <Spinner
                        android:id="@+id/new_match_losses"
                        android:layout_width="wrap_content"
                        android:minWidth="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/new_match_submit_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_match_submit_btn_lbl" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_match_submitting_cont"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:gravity="center">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/new_match_submitting_lbl"
                android:paddingTop="4dip"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_match_match_submission_result_cont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/new_match_submission_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingTop="4dip" />

            <Button
                android:id="@+id/new_match_submission_continue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_match_continue_btn_lbl"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
